Tue May 27 17:45:09 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/openssl/test_hmac.rb (test_binary_update): Added Test for
	  HMAC signing with UTF-8 String. [Bug #7512][ruby-core:50559]

Tue May 27 17:10:14 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/runner.rb: fixed randomly test failure.
	  [Bug #6573][ruby-core:45563]

Tue May 27 16:58:12 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_timeout.rb (test_timeout): inverted test condition.
	  [Bug #8523]

Tue May 27 12:24:22 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Show leaked file descriptors.

Tue May 27 11:12:56 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_fileno, rb_io_inspect): non-modification does not
	  error on frozen IO.  [ruby-dev:48241] [Bug #9865]

Tue May 27 00:00:21 2014  yui-knk  <spiketeika@gmail.com>

	* insns.def (defineclass): fix typo in the instruction comment.
	  [fix GH-618]

Mon May 26 16:33:15 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file.rb: skip the test of atime on Windows, because
	  Windows delays updating atime about 1 hour.
	  see more details:
	    http://msdn.microsoft.com/en-us/library/windows/desktop/ms724290%28v=vs.85%29.aspx

Mon May 26 12:25:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optionparser.rb, lib/optparse.rb (OptParse): aliases.
	  [ruby-core:62751] [Feature #9864]

Mon May 26 07:59:34 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Show Finished threads line-by-line.

Mon May 26 01:39:02 2014  Zachary Scott  <e@zzak.io>

	* lib/csv.rb: Reject nil as data source for CSV.new, patch by @Peeja.
	  [Fixes GH-580] https://github.com/ruby/ruby/pull/580

Mon May 26 01:07:51 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Show leaked threads and tempfiles
	  line-by-line.

Sun May 25 23:02:06 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (MiniTest::Assertions#diff): Remove
	  tempfiles.
